apps/example/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-service-traefik
spec:
  ingressClassName: traefik   # <-- esto es lo importante
  rules:
  - host: billing.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: billing-service
            port:
              number: 80
